--- a/text/quasi2d.tex
+++ b/text/quasi2d.tex
@@ -1,4 +1,5 @@
 \chapter[Voronoi Analysis of Quasi\--Two\--Dimensional Hard Particle Systems]{Voronoi Analysis of \\ Quasi\--Two\--Dimensional \\ Hard Particle Systems} 
+\label{ch:quasi2d}
 
 \begin{chapterabstract}
 XXX
