--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -13,7 +13,7 @@ The limits on the parameter $\alpha$ are discussed and compared to previous resu
 
 \section{Disorder in Two\--Dimensional Networks}
 
-As mentioned in previous sections \davidnote{link}, the characterisation of the disorder in \td{} networks can be achieved through the ring structure. 
+As mentioned in previously, the characterisation of the disorder in \td{} networks can be achieved through the ring structure. 
 For three\--coordinate atomic materials the mean ring size is constrained to six by Euler's law, which allows the variance of the ring size distribution, $\mu_2$, to act as a proxy measure for disorder (see sections \ref{s:eulerslaw}, \ref{s:lemaitre}).
 The same set of ring statistics can however lead to a large number of different ring arrangements, as shown in figure \ref{fig:zach}.
 These can be further quantified by the \aw{} parameter, which measures the ring\--ring correlations.
@@ -339,8 +339,7 @@ An innovative method has been presented to generate \td{} materials with well de
 This targeted \mc{} search algorithm allows configurations to be constructed which have precise ring size distributions and ring\--ring correlations.
 The advantage of this approach is that configurations can be produced rapidly with controllable properties; which may lie outside experimentally or physically accessible regions of phase space.
 These configurations may then be used as starting points for further investigations.
-For example, the algorithm outlined in this work has already been utilised to study the mechanical properties of vitreous silica under deformation \cite{Bamer2020,Ebrahem2020a}.
-\davidnote{Oli's thesis also}
+For example, the algorithm outlined in this work has already been utilised to study the mechanical properties of vitreous silica under deformation \cite{Bamer2020,Ebrahem2020a,Whitaker2019}.
 In this chapter the targeted optimisation method was employed to probe the physical meaning of the \aw{} parameter.
 The effect of $\alpha$ on the ring structure has been quantified through partial RDFs.
 In addition the energetic minima for a range of systems has been shown to correspond well with values commonly found in nature.
