--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -12,7 +12,7 @@ These advances may yet represent a watershed moment in chemistry, facilitating t
 
 It is clear that understanding the structure of amorphous materials is key to this aim.
 However, due to the relative recentness of these experimental discoveries, much of the existing theory arises from studies of systems on greater length scales.
-Specifically, in the second half of the 20\th{} century, much work was done \marknote{carried out?} on the formation of polycrystals in metals and alloys.
+Specifically, in the second half of the 20\th{} century, much work was carried out on the formation of polycrystals in metals and alloys.
 By annealing the metal and slicing through the sample, the grains in the polycrystal could be directly imaged; revealing a system of tessellating polygons not dissimilar to an atomic material \cite{Beck1954,Dunn1957}.
 Over time it became apparent that the structure of these networks is constrained on a series of different levels.
 
@@ -108,9 +108,9 @@ which can be simulated via hard particle models \cite{Thorneywork2017}.
 The second are the ring structures in so\--called ``procrystalline'' lattices \cite{Overy2016}.
 \davidnote{Paragraph to wrap up}
 \marknote{PH here?}
+\davidnote{Yep PH here}
 
 
 \section{Thesis Structure}
 
-\davidnote{Add thesis structure to introduction}
-\marknote{Test: Mark can add notes with the command \textbackslash marknote} 
+ 
